opa/constraints/constraint-deny-hostnetwork.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPSPHostNetwork
metadata:
  name: disallow-hostnetwork
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    excludedNamespaces:
      - kube-system
      - kube-public
      - kube-node-lease
      - ingress-nginx
      - local-path-storage
