opa/constraints/constraint-require-app.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequiredLabels
metadata:
  name: require-app-label
spec:
  enforcementAction: warn
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    excludedNamespaces: 
      - "kube-system"
      - "kube-public"
      - "kube-node-lease"
      - "opa"
      - "monitoring"
      - "logging"
      - "auth"
      - "vault"
      - "gitea"
      - "ingress-nginx"
      - "local-path-storage"
  parameters:
    labels: ["app"]
