opa/constraints/constrainttemplate-hostnetwork.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: k8spsphostnetwork
spec:
  crd:
    spec:
      names:
        kind: K8sPSPHostNetwork
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8spsphostnetwork

        violation[{"msg": msg}] {
          input.review.object.spec.hostNetwork == true
          msg := "Use of hostNetwork is not allowed"
        }
