opa/constraints/constrainttemplate-latest-tag.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: k8sdisallowlatesttag
spec:
  crd:
    spec:
      names:
        kind: K8sDisallowLatestTag
      validation:
        openAPIV3Schema:
          type: object
          properties:
            exemptImages:
              type: array
              items:
                type: string
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8sdisallowlatesttag

        violation[{"msg": msg}] {
          container := input.review.object.spec.containers[_]
          image := container.image
          endswith(image, ":latest")
          not exempt_image(image)
          msg := sprintf("Container image '%s' uses forbidden 'latest' tag", [image])
        }

        violation[{"msg": msg}] {
          container := input.review.object.spec.containers[_]
          image := container.image
          not contains(image, ":")
          not exempt_image(image)
          msg := sprintf("Container image '%s' has no tag specified (defaults to 'latest')", [image])
        }

        exempt_image(image) {
          input.parameters.exemptImages[_] == image
        }
